# jigsaw-puzzle

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  output.json  pyproject.toml  test-payload.json
.github/workflows/: README.md  ci.yml  deploy-frontend.yml  deploy-lambda.yml  terraform-apply.yml  terraform-plan.yml
backend/: .coveragerc  .env.example  README.md  SETUP.md  app.py  puzzle_logic.py  pytest.ini  schemas.py
backend/app/api/: main.py
backend/app/api/routes/: puzzles.py
backend/app/core/: config.py  logger.py  schemas.py
backend/app/services/: image_processor.py  puzzle_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_puzzle_service.py  test_schemas.py
docs/: 20251016_implementation-roadmap.md  20251016_uv-guide.md  20251018_code-review.md  20251018_fix-progress.md  20251018_react-frontend-guide.md  20251020_improvement-flow.md  20251021_aws全体間.md  20251021_proxyのちの対策.md  20251021_terraform基本.md  20251022_frontend-testing.md  20251022_github-oidc-setup.md  20251022_mangum実装.md  20251022_next-steps-and-branch-strategy.md  20251022_test-coverage-and-cicd-improvement.md  20251026_cicd-quick-reference.md  20251026_development-workflow.md  cicd-architecture.md  deployment-guide_20251016.md  fix-progress.md  system-design_20251016.md
docs/わかっていないこと/: ssm.md  test_api.md
frontend/: .env.example  .env.production  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx  PuzzleDetail.tsx  PuzzleList.tsx  PuzzleUpload.tsx
frontend/src/components/__tests__/: PuzzleList.test.tsx
frontend/src/config/: amplify.ts  api.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Home.tsx  PuzzleCreate.tsx
frontend/src/pages/__tests__/: Home.test.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/pages/puzzles/: PuzzleCreate.tsx  PuzzleDetail.tsx
frontend/src/pages/puzzles/__tests__/: PuzzleCreate.test.tsx
frontend/src/test/: setup.ts  vitest.d.ts
frontend/src/types/: puzzle.ts
lambda/puzzle-register/: README.md  index.py
scripts/: deploy-frontend.sh  deploy-lambda.sh  sync_config.py
terraform/: README.md
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/environments/dev/: backend-config.tf  backend.tf  frontend-config.tf  main.tf  outputs.tf  tfplan  variables.tf
terraform/environments/prod/: backend.tf  frontend-config.tf  main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cognito/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/frontend/: main.tf  outputs.tf  variables.tf
terraform/modules/github-oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
